--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -3726,7 +3726,7 @@ public class ElasticSearchDocumentTest {
 
 
 
-###### term 查询
+##### term 查询
 
 **term 查询**
 
@@ -3749,7 +3749,7 @@ terms: in()
 
 
 ```json
-// http://192.168.31.90:10519/sms-logs-index/_search/
+POST http://192.168.31.90:10519/sms-logs-index/_search/
 {
     "from": 0,
     "size": 5,
@@ -3801,7 +3801,7 @@ public void searchDocument() throws IOException {
 
 
 
-###### match 查询
+##### match 查询
 
 **match 查询**
 
@@ -3834,7 +3834,7 @@ match 针对一个 Field 做检索，multi_match 针对多个 Field 进行检索
 
 
 ```json
-// http://192.168.31.90:10519/sms-logs-index/_search/
+POST http://192.168.31.90:10519/sms-logs-index/_search/
 // match_all 查询
 {
     "from": 0,
@@ -3908,14 +3908,16 @@ public void searchDocument() throws IOException {
 
 
 
+##### 其它查询
+
 ###### id 查询
 
 ```json
 // id 查询
-http://192.168.31.90:10519/sms-logs-index/_doc/2O9_VpEBCrSApDIskHH3
+GET http://192.168.31.90:10519/sms-logs-index/_doc/2O9_VpEBCrSApDIskHH3
 
 // ids 查询
-http://192.168.31.90:10519/sms-logs-index/_search/
+POST http://192.168.31.90:10519/sms-logs-index/_search/
 {
     "from": 0,
     "size": 5,
@@ -3974,6 +3976,322 @@ public void searchDocument() throws IOException {
 | ipAddr     | 下发服务器IP地址                 |
 | replyTotal | 短信状态报告返回时长（秒）       |
 | fee        | 扣费（分）                       |
+
+
+
+###### prefix 查询
+
+前缀查询，可以通过一个关键字去指定一个 Field 的前缀，从而查询到指定的文档。
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search/
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "prefix": {
+            "corpName": {
+                "value": "途虎养车"
+            }
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    // 搜索
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.prefix(p -> p.field("corpName").value("途虎养车")) // prefix 查询
+                    )
+                    .from(0)   // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .size(20), // 默认查询 10 条,如果需要查询更多则需要指定 size
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
+###### fuzzy 查询
+
+模糊查询，我们输入字符的大概，ES就可以去根据输入的内容大概去匹配一下结果。
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search/
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "fuzzy": {
+            "corpName": {
+                "value": "途虎养车",
+                "prefix_length": 3 // 前三个字符不允许出现错误
+            }
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.fuzzy(f -> f.field("corpName").value("途虎养车").prefixLength(2)) // fuzzy 查询
+                    )
+                    .from(0)   // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .size(20), // 默认查询 10 条,如果需要查询更多则需要指定 size
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.wildcard(f -> f.field("corpName").value("途虎*")) // wildcard 查询
+                    )
+                    .from(0)   // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .size(20), // 默认查询 10 条,如果需要查询更多则需要指定 size
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
+###### wildcard 查询
+
+通配查询，和 MySQL 中的 like 是一个套路，可以在查询时，在字符串中指定通配符 `*` 和占位符 `?`
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search/
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "wildcard": {
+            "corpName": {
+                "value": "盒马*" // ? 的个数需要和通配的字符个数相同
+            }
+        }
+    }
+}
+```
+
+
+
+###### range 查询
+
+范围查询，只针对数值类型，对某一个 Field 进行大于或者小于的范围指定。
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search/
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "range": {
+            "fee": {
+                "gte": 5, // gt/gte/lt/lte
+                "lte": 10
+            }
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.range(r -> r.field("fee").gte(JsonData.of(5)).lte(JsonData.of(10))) // range 查询
+                    )
+                    .from(0)   // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .size(20), // 默认查询 10 条,如果需要查询更多则需要指定 size
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
+###### regexp 查询
+
+正则查询，通过你编写的正则表达式去匹配内容。
+
+Ps：prefix，fuzzy，wildcard 和 regexp 查询效率相对比较低，要求效率比较高时，避免去使用。
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search/
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "regexp": {
+            "mobile": "180[0-9]{8}"
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.regexp((r -> r.field("mobile").value("180[0-9]{8}"))) // regexp 查询
+                    )
+                    .from(0)   // 浅分页，类似 mysql 的 limit 参见：https://www.elastic.co/guide/en/elasticsearch/reference/current/paginate-search-results.html
+                    .size(20), // 默认查询 10 条,如果需要查询更多则需要指定 size
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
+##### 深分页 Scroll
+
+ES 对 from + size 是有限制的，from 和 size 二者之和不能超过 1W
+
+from+size 在 ES 查询数据的方式
+
+- 第一步现将用户指定的关键进行分词。
+- 第二步将词汇去分词库中进行检索，得到多个文档的 id。
+- 第三步去各个分片中去拉取指定的数据。耗时较长。
+- 第四步将数据根据score进行排序。耗时较长。
+- 第五步根据from的值，将查询到的数据舍弃一部分。
+- 第六步返回结果。
+
+
+
+Scroll 在 ES 查询数据的方式
+
+- 第一步现将用户指定的关键进行分词。
+- 第二步将词汇去分词库中进行检索，得到多个文档的 id。
+- 第三步将文档的 id 存放在一个 ES 的上下文中。
+- 第四步根据你指定的 size 的个数去 ES 中检索指定个数的数据，拿完数据的文档 id，会从上下文中移除。
+- 第五步如果需要下一页数据，直接去 ES 的上下文中，找后续内容。
+
+
+
+**Scroll 方式，不适合做实时查询**
+
+
+
+```json
+// 执行 scro11 查询，返回第一页数据，并且将文档 id 信息存放在 ES 上下文中，指定生存时间 1m
+POST http://192.168.31.90:10519/sms-logs-index/_search?scroll=1m
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "match_all": {}
+    }
+}
+
+// 根据 scro1l 查询下一页数据
+POST http://192.168.31.90:10519/_search/scroll
+{
+    "scroll_id": "FGluY2x1ZGVfY29udGV4dF91dWlkDXF1ZXJ5QW5kRmV0Y2gBFmZlZ19hanZmUm9DVzVWaV94Q3hvTmcAAAAAAAAAFBZNcmV1Wkt0alFIaTM4Si1TZ2FqN013",
+    "scroll": "1m"
+}
+
+// 删除 scro11 在 ES 上下文中的数据
+DELETE http://192.168.31.90:10519/_search/scroll/FGluY2x1ZGVfY29udGV4dF91dWlkDXF1ZXJ5QW5kRmV0Y2gBFmZlZ19hanZmUm9DVzVWaV94Q3hvTmcAAAAAAAAAFBZNcmV1Wkt0alFIaTM4Si1TZ2FqN013
+```
+
+
+
+```java
+public void scrollDocument() throws IOException {
+    long num = 0L;
+    // 执行 scro11 查询
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .scroll(Time.of(t -> t.time("1m")))
+                    .query(q ->
+                            q.matchAll(m -> m) // match_all 查询
+                    )
+                    .size(5),
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); // 数量
+    System.out.println(response.scrollId()); // scrollId
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+    num = response.hits().hits().size();
+
+    // 根据 scro1l 查询下一页数据
+    String scrollId = response.scrollId();
+    while (num > 0) {
+        ScrollResponse<SmsLogsPO> scrollResponse = client.scroll(s -> s
+                        .scrollId(scrollId)
+                        .scroll(Time.of(t -> t.time("1m"))),
+            SmsLogsPO.class
+        );
+        System.out.println(scrollResponse.hits().total().value()); // 数量
+        System.out.println(scrollResponse.scrollId()); // scrollId
+        scrollResponse.hits().hits().forEach(h -> {
+            SmsLogsPO log = h.source(); // 实体类
+            System.out.println(log);
+        });
+        num = scrollResponse.hits().hits().size();
+    }
+
+    // 删除 scro11 在 ES 上下文中的数据
+    ClearScrollResponse clearScrollResponse = client.clearScroll(s -> s.scrollId(scrollId));
+    System.out.println(clearScrollResponse);
+}
+```
 
 
 
