--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -4295,6 +4295,241 @@ public void scrollDocument() throws IOException {
 
 
 
+##### delete-by-query
+
+根据 term，match 等查询方式去删除大量的文档
+
+**如果你需要删除的内容，是 index 下的大部分数据，推荐创建一个全新的 index，将保留的文档内容，添加到全新的索引。**
+
+
+
+```JSON
+POST http://192.168.31.90:10519/sms-logs-index/_delete_by_query
+{
+    "query": {
+        "range": {
+            "fee": {
+                "lt": 4
+            }
+        }
+    }
+}
+```
+
+
+
+```java
+public void deleteByQueryDocument() throws IOException {
+    DeleteByQueryResponse response = client.deleteByQuery(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.range(r -> r.field("fee").lt(JsonData.of(4))) // range 查询
+                    ));
+    System.out.println(response);
+}
+```
+
+
+
+##### 复合查询
+
+###### bool 查询
+
+复合过滤器，将你的多个查询条件，以一定的逻辑组合在一起。
+
+- must：所有的条件，用 must 组合在一起，表示 And 的意思
+- must_not：将 must_not 中的条件，全部都不能匹配，标识 Not 的意思
+- should：所有的条件，用 should 组合在一起，表示 Or 的意思
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search
+{
+    "query": {
+        "bool": {
+            "should": [
+                {
+                    "term": {
+                        "province": {
+                            "value": "北京"
+                        }
+                    }
+                },
+                {
+                    "term": {
+                        "province": {
+                            "value": "武汉"
+                        }
+                    }
+                }
+            ],
+            "must_not": [
+                {
+                    "term": {
+                        "operatorId": {
+                            "value": "2"
+                        }
+                    }
+                }
+            ],
+            "must": [
+                {
+                    "match": {
+                        "smsContent": "中国"
+                    }
+                },
+                {
+                    "match": {
+                        "smsContent": "平安"
+                    }
+                }
+            ]
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.bool(b -> b // bool 查询
+                                            .should(TermQuery.of(t -> t.field("province").value("北京"))._toQuery(), TermQuery.of(t -> t.field("province").value("武汉"))._toQuery())
+                                            .mustNot(TermQuery.of(t -> t.field("operatorId").value("2"))._toQuery())
+                                            .must(MatchQuery.of(m -> m.field("smsContent").query("中国"))._toQuery(), MatchQuery.of(m -> m.field("smsContent").query("平安"))._toQuery())) // bool 查询
+                    ),
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
+###### boosting 查询
+
+boosting 查询可以帮助我们去影响查询后的 score
+
+- positive:只有匹配上 positive 的查询的内容，才会被放到返回的结果集中。
+- negative:如果匹配上和positive并且也匹配上了negative，就可以降低这样的文档score。
+- negative_boost:指定系数，必须小于1.0
+
+关于查询时，分数是如何计算的
+
+- 搜索的关键字在文档中出现的频次越高，分数就越高。
+- 指定的文档内容越短，分数就越高。
+- 我们在搜索时，指定的关键字也会被分词，这个被分词的内容，被分词库匹配的个数越多，分数越高。
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search
+{
+    "query": {
+        "boosting": {
+            "positive": {
+                "match": {
+                    "smsContent": "收获安装"
+                }
+            },
+            "negative": {
+                "match": {
+                    "smsContent": "王五"
+                }
+            },
+            "negative_boost": 0.5
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.boosting(b -> b
+                                            .positive(MatchQuery.of(m -> m.field("smsContent").query("收获安装"))._toQuery())
+                                            .negative(MatchQuery.of(m -> m.field("smsContent").query("王五"))._toQuery())
+                                            .negativeBoost(0.5))
+                    ),
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
+##### filter 查询
+
+query，根据你的查询条件，去计算文档的匹配度得到一个分数，并且根据分数进行排序，不会做缓存的。
+
+filter，根据你的查询条件去査询文档，不去计算分数，而且 filter 会对经常被过滤的数据进行缓存。
+
+
+
+```json
+{
+    "query": {
+        "bool": {
+            "filter": [
+                {
+                    "term": {
+                        "province": {
+                            "value": "武汉"
+                        }
+                    }
+                },
+                {
+                    "range": {
+                        "fee": {
+                            "lte": 5
+                        }
+                    }
+                }
+            ]
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q ->
+                                    q.bool(b -> b
+                                            .filter(
+                                                    TermQuery.of(t -> t.field("province").value("武汉"))._toQuery(),
+                                                    RangeQuery.of(r -> r.field("fee").lte(JsonData.of(5)))._toQuery()
+                                            ))
+                    ),
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+    });
+}
+```
+
+
+
 ### 方式二
 
 需要安装支持的 ES 版本，[参考](https://docs.spring.io/spring-data/elasticsearch/reference/elasticsearch/versions.html)
