--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -4530,6 +4530,226 @@ public void searchDocument() throws IOException {
 
 
 
+##### 高亮查询
+
+高亮查询就是你用户输入的关键字，以一定的特殊样式展示给用户，让用户知道为什么这个结果被检索出来。
+
+高亮展示的数据，本身就是文档中的一个 Field，单独将 Field 以 highlight 的形式返回给你。
+
+ES 提供了一个 highlight 属性，和 query 同级别的。
+
+- fragment_size：指定高亮数据展示多少个字符回来。
+- pre_tags：指定前缀标签，举个栗子 <font color="red">
+- post_tags：指定后缀标签，举个栗子 </font>
+- fields：指定哪几个 Field 以高亮形式返回
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search
+
+{
+    "from": 0,
+    "size": 5,
+    "query": {
+        "match": {
+            "smsContent": "尊敬尊贵"
+        }
+    },
+    "highlight": {
+        "fields": {
+            "smsContent": {}
+        },
+        "pre_tags": "<font color='red'>",
+        "post_tags": "</font>",
+        "fragment_size": 10
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q -> q
+                                    .match(m -> m.field("smsContent").query("尊敬尊贵")) // match 查询
+                    )
+                    .highlight(h -> h // 高亮查询
+                            .fields("smsContent", v -> v
+                                    .fragmentSize(10)
+                                    .preTags("<font color='red'>")
+                                    .postTags("</font>"))), // 默认查询 10 条,如果需要查询更多则需要指定 size
+            SmsLogsPO.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        SmsLogsPO log = h.source(); // 实体类
+        System.out.println(log);
+        System.out.println(h.highlight());
+    });
+}
+```
+
+
+
+##### 聚合查询
+
+ES 的聚合查询和 MySQL 的聚合查询类型，ES 的聚合查询相比 MySQL 要强大的多，ES 提供的统计数据的方式多种多样。
+
+
+
+```java
+// ES 聚合查询的 RESTful 查询语法
+POST index/_search
+{
+    "aggs": {
+        "结果属性名": {
+            "agg_type": {
+                "field": "字段名"
+            }
+        }
+    }
+}
+```
+
+
+
+###### 去重计数查询
+
+去重计数，即 `cardinality`，第一步先将返回的文档中的一个指定的field进行去重，统计一共有多少条。
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search
+{
+    "aggs": {
+        "agg_result": {
+            "cardinality": {
+                "field": "province"
+            }
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q -> q
+                                    .matchAll(m -> m) // match_all 查询
+                    )
+                    .aggregations("agg_result", a -> a    // 聚合查询
+                            .cardinality(c -> c
+                                    .field("province"))),
+            SmsLogsPO.class);
+    Aggregate aggregate = response.aggregations().get("agg_result");
+    System.out.println(aggregate.cardinality().value());
+}
+```
+
+
+
+###### 范围统计
+
+统计一定范围内出现的文档个数，比如，针对某一个 Field 的值在 0-100,100-200,200~300 之间文档出现的个数分别是多少。
+
+范围统计可以针对普通的数值，针对时间类型，针对 ip 类型都可以做相应的统计。
+
+range, date_range, ip_range
+
+
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search
+// 数字范围统计
+{
+    "aggs": {
+        "range_result": {
+            "range": {
+                "field": "fee",
+                "ranges": [
+                    {
+                        "to": 5
+                    },
+                    {
+                        "from": 5, // 包含 from 值，不包含 to 值
+                        "to": 10
+                    },
+                    {
+                        "from": 10
+                    }
+                ]
+            }
+        }
+    }
+}
+// 时间范围统计
+{
+    "aggs": {
+        "range_result": {
+            "date_range": {
+                "field": "create_date",
+                "format": "yyyy",
+                "ranges": [
+                    {
+                        "to": "2000"
+                    },
+                    {
+                        "from": "2000"
+                    }
+                ]
+            }
+        }
+    }
+}
+// ip 范围统计
+{
+    "aggs": {
+        "range_result": {
+            "ip_range": {
+                "field": "ip_addr",
+                "ranges": [
+                    {
+                        "to": "10.126.2.8"
+                    },
+                    {
+                        "from": "10.126.2.8"
+                    }
+                ]
+            }
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q -> q
+                                    .matchAll(m -> m) // match_all 查询
+                    .aggregations("range_result", r -> r
+                            .range(rg -> rg
+                                    .field("fee")
+                                    .ranges(
+                                            AggregationRange.of(ar -> ar.to("5")),
+                                            AggregationRange.of(ar -> ar.from("5").to("10")),
+                                            AggregationRange.of(ar -> ar.from("10"))))),
+            SmsLogsPO.class);
+    Aggregate aggregate = response.aggregations().get("range_result");
+    for(RangeBucket bucket:aggregate.range().buckets().array()){
+        System.out.println(bucket);
+    }
+}
+```
+
+
+
 ### 方式二
 
 需要安装支持的 ES 版本，[参考](https://docs.spring.io/spring-data/elasticsearch/reference/elasticsearch/versions.html)
