--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -4595,6 +4595,8 @@ public void searchDocument() throws IOException {
 
 ##### 聚合查询
 
+[Aggregations | Elasticsearch Guide ](https://www.elastic.co/guide/en/elasticsearch/reference/8.10/search-aggregations.html)
+
 ES 的聚合查询和 MySQL 的聚合查询类型，ES 的聚合查询相比 MySQL 要强大的多，ES 提供的统计数据的方式多种多样。
 
 
@@ -4615,7 +4617,7 @@ POST index/_search
 
 
 
-###### 去重计数查询
+###### 去重计数查询(cardinality)
 
 去重计数，即 `cardinality`，第一步先将返回的文档中的一个指定的field进行去重，统计一共有多少条。
 
@@ -4652,7 +4654,7 @@ public void searchDocument() throws IOException {
 
 
 
-###### 范围统计
+###### 范围统计(range)
 
 统计一定范围内出现的文档个数，比如，针对某一个 Field 的值在 0-100,100-200,200~300 之间文档出现的个数分别是多少。
 
@@ -4745,6 +4747,174 @@ public void searchDocument() throws IOException {
     for(RangeBucket bucket:aggregate.range().buckets().array()){
         System.out.println(bucket);
     }
+}
+```
+
+
+
+###### 统计聚合查询(extended_stats)
+
+他可以帮你査询指定Field的最大值，最小值，平均值，平方和。。。。
+
+```json
+POST http://192.168.31.90:10519/sms-logs-index/_search
+{
+    "aggs": {
+        "stats_result": {
+            "extended_stats": {
+                "field": "fee"
+            }
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<SmsLogsPO> response = client.search(request -> request
+                    .index(ElasticSearchIndexTest.INDEX_NAME)
+                    .query(q -> q.matchAll(m -> m)) // match_all 查询
+                    .aggregations("stats_result", s -> s   // 聚合查询（统计聚合查询）
+                            .extendedStats(es -> es.field("fee"))),
+            SmsLogsPO.class);
+    Aggregate aggregate = response.aggregations().get("stats_result");   // 聚合查询（统计聚合查询）
+    System.out.println(aggregate.extendedStats());
+}
+```
+
+
+
+##### 地图经纬度搜索
+
+ES 中提供了一个数据类型 geo-point，这个类型就是用来存储经纬度的。
+
+
+
+###### 测试数据
+
+```json
+POST http://192.168.31.90:10519/map-index/_doc/1
+{
+    "name": "天安门",
+    "location": {
+        "lon": 116.403981,
+        "lat": 39.914492
+    }
+}
+POST http://192.168.31.90:10519/map-index/_doc/2
+{
+    "name": "海淀公园",
+    "location": {
+        "lon": 116.302509,
+        "lat": 39.991152
+    }
+}
+POST http://192.168.31.90:10519/map-index/_doc/3
+{
+    "name": "北京动物园",
+    "location": {
+        "lon": 116.34304,
+        "lat": 39.947468
+    }
+}
+```
+
+
+
+###### ES 的地图检索方式
+
+geo_distance：直线距离检索方式
+
+geo_bounding_box：以两个点确定一个矩形，获取在矩形内的全部数据
+
+geo_polygon：以多个点，确定一个多边形，获取多边形内的全部数据
+
+
+
+###### 查询
+
+```json
+POST http://192.168.31.90:10519/map-index/_search
+{
+    "query": {
+        "geo_distance": {
+            "location": {				// 确定一个点
+                "lon": 116.433733,
+                "lat": 39.908404
+            },
+            "distance": 3000,			// 确定半径
+            "distance_type": "arc"		// 指定形状为圆形
+        }
+    }
+}
+
+POST http://192.168.31.90:10519/map-index/_search
+{
+    "query": {
+        "geo_bounding_box": {
+            "location": {
+                "top_left": {				// 左上角的坐标点
+                    "lon": 116.326943,
+                    "lat": 39.95499
+                },
+                "bottom_right": {			// 右下角的坐标点
+                    "lon": 116.347783,
+                    "lat": 39.939281
+                }
+            }
+        }
+    }
+}
+
+POST http://192.168.31.90:10519/map-index/_search
+{
+    "query": {
+        "geo_polygon": {
+            "location": {
+                "points": [
+                    {
+                        "lon": 116.298916,
+                        "lat": 39.99878
+                    },
+                    {
+                        "lon": 116.29561,
+                        "lat": 39.972576
+                    },
+                    {
+                        "lon": 116.327661,
+                        "lat": 39.984739
+                    }
+                ]
+            }
+        }
+    }
+}
+```
+
+
+
+```java
+public void searchDocument() throws IOException {
+    SearchResponse<Map> response = client.search(request -> request
+            .index(ElasticSearchIndexTest.MAP_INDEX_NAME)
+            .query(q -> q
+                    .geoPolygon(gpq -> gpq
+                            .field("location")
+                            .polygon(
+                                    GeoPolygonPoints.of(gpp->gpp
+                                            .points(
+                                                    GeoLocation.of(gl->gl.latlon(LatLonGeoLocation.of(f->f.lon(116.298916).lat(39.99878)))),
+                                                    GeoLocation.of(gl->gl.latlon(LatLonGeoLocation.of(f->f.lon(116.29561).lat(39.972576)))),
+                                                    GeoLocation.of(gl->gl.latlon(LatLonGeoLocation.of(f->f.lon(116.327661).lat(39.984739))))
+                                            ))))),
+            Map.class);
+    System.out.println(response.hits().total().value()); //数量
+    response.hits().hits().forEach(h -> {
+        Map log = h.source();
+        System.out.println(log);
+    });
 }
 ```
 
