--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -75,13 +75,65 @@ x y
 
 
 
+## 光圈
+
+整档光圈：F1 、F1.4、F2、F2.8、F4、F5.6、F8、F11、F16、F22、F32、F45、F64
+
+- 每档之间的F数值相差 1.4 倍
+- 相邻整档光圈通光量相差一倍
+- 其它档位为中间档，例如：F3.2、F3.5、F4.5、F5.0、F6.3、F7.1、F9、F10，按照 1/3 档进行步进
+
+
+
+| T\Ev\F | 1    | 1.4  | 2    | 2.8  | 4    | 5.6  | 8    | 11   | 16   | 22   | 32   | 45   | 64   |
+| ------ | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
+| 1      | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    | 8    | 9    | 10   | 11   | 12   |
+| 1/2    | 1    | 2    | 3    | 4    | 5    | 6    | 7    | 8    | 9    | 10   | 11   | 12   | 13   |
+| 1/4    | 2    | 3    | 4    | 5    | 6    | 7    | 8    | 9    | 10   | 11   | 12   | 13   | 14   |
+| 1/8    | 3    | 4    | 5    | 6    | 7    | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   |
+| 1/15   | 4    | 5    | 6    | 7    | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   | 16   |
+| 1/30   | 5    | 6    | 7    | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   | 16   | 17   |
+| 1/60   | 6    | 7    | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   | 16   | 17   | 18   |
+| 1/125  | 7    | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   | 16   | 17   | 18   | 19   |
+| 1/250  | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   | 16   | 17   | 18   | 19   | 20   |
+| 1/500  | 9    | 10   | 11   | 12   | 13   | 14   | 15   | 16   | 17   | 18   | 19   | 20   | 21   |
+| 1/1000 | 10   | 11   | 12   | 13   | 14   | 15   | 16   | 17   | 18   | 19   | 20   | 21   | 22   |
+| 1/2000 | 11   | 12   | 13   | 14   | 15   | 16   | 17   | 18   | 19   | 20   | 21   | 22   | 23   |
+| 1/4000 | 12   | 13   | 14   | 15   | 16   | 17   | 18   | 19   | 20   | 21   | 22   | 23   | 24   |
+| 1/8000 | 13   | 14   | 15   | 16   | 17   | 18   | 19   | 20   | 21   | 22   | 23   | 24   | 25   |
+
+
+
+
+
 # A7M4
 
 ![A7R5 ISO-Noise](../pictures/摄影/a7r5-iso-noise.svg)
 
 ![A7R5 ISO-PDR](../pictures/摄影/a7r5-iso-pdr.svg)
 
-![A7M4 视频 ISO 基准](../pictures/摄影/002.png)
+
+
+## Base ISO
+
+| Gamma       | ISO1 | ISO2 |
+| ----------- | ---- | ---- |
+| 拍照        | 100  | 400  |
+| Movie       | 100  | 320  |
+| Still       | 100  | 320  |
+| ITU709      | 100  | 400  |
+| ITU709 800% | 800  | 3200 |
+| Cine1       | 80   | 320  |
+| Cine2       | 64   | 250  |
+| Cine3       | 100  | 400  |
+| Cine4       | 125  | 500  |
+| S-Log2      | 800  | 3200 |
+| S-Log3      | 800  | 3200 |
+| HLG         | 125  | 500  |
+| HLG1        | 64   | 250  |
+| HLG2        | 100  | 400  |
+| HLG3        | 125  | 500  |
+| S-Cinetone  | 125  | 500  |
 
 
 
@@ -94,6 +146,8 @@ x y
 ![A7R5 ISO-PDR](../pictures/摄影/a7r5-iso-pdr.svg)
 
 
+
+## Base ISO
 
 
 
@@ -125,6 +179,8 @@ x y
 分配 `设置 -> 对焦 -> 对焦区域 -> 跟踪开启 + AF开启` 给 AF-ON 按钮
 
 拍摄静态物体时，使用 AF-ON 按钮对焦并持续按住，可以移动画面并保持焦点在之前的对焦区域
+
+
 
 
 
