--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -281,16 +281,35 @@ https://sonyalpha.blog/
 
 
 
-黑金:
-1.色相:暖色向橙色靠拢
-2.饱和度:冷色饱和度都去掉
-3.调整冷色的明亮度。
-4.降低曝光，增加清晰度，去除薄雾。
+### 还原
 
-青橙
-1.校准面板中色相:将蓝原色降低，
-2.混色器（HSL）中的色相:将暖色向橙色靠拢，将冷色向青色靠拢
-3.明亮度:冷色降低
-4.饱和度:降低
-5.清晰度增加
+饱和度：所有像素点都增加饱和度
+
+自然饱和度：饱和度不够的像素点增加饱和度
+
+只调整高光部分的饱和度：在校准中调整影响高光的原色的饱和度
+
+1. 提亮暗部：增加阴影、增加黑色，直到和拍摄环境的亮度
+2. 调整色温：还原拍摄时的色温，调整色调
+3. 增加饱和度：压暗中间灰，增加去除薄雾。颜色分级：降低中间调明亮度
+4. 照片美化（继续增加饱和度）：校准中增加红原色和绿原色的饱和度
+
+
+
+### 黑金
+
+1. 色相:暖色向橙色靠拢
+2. 饱和度:冷色饱和度都去掉
+3. 调整冷色的明亮度。
+4. 降低曝光，增加清晰度，去除薄雾。
+
+
+
+### 青橙
+
+1. 校准面板中色相:将蓝原色降低，
+2. 混色器（HSL）中的色相:将暖色向橙色靠拢，将冷色向青色靠拢
+3. 明亮度:冷色降低
+4. 饱和度:降低
+5. 清晰度增加
 
