--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -739,21 +739,16 @@ KEYS *
 
 打[开zookeeper下载页面](https://zookeeper.apache.org/releases.html)选择一个版本下载。
 
-将下载好的文件解压到/opt/zookeeper目录下
-
-```sh
-tar -zxvf apache-zookeeper-3.6.1-bin.tar.gz -C /opt/zookeeper/
-```
-
-创建软连接
-
 ```shell
-ln -s /opt/zookeeper/apache-zookeeper-3.6.1-bin /opt/zookeeper/zookeeper
+$ sudo tar -zxvf apache-zookeeper-3.8.4-bin.tar.gz
+$ sudo mv apache-zookeeper-3.8.4-bin /opt/apps/zookeeper
 ```
+
+
 
 ### 配置
 
-复制/opt/zookeeper/zookeeper/conf/zoo_sample.cfg为/opt/zookeeper/zookeeper/conf/zoo.cfg并修改为如下
+`sudo cp /opt/apps/zookeeper/conf/zoo_sample.cfg /opt/apps/zookeeper/conf/zoo.cfg `
 
 ```properties
 # The number of milliseconds of each tick
@@ -771,9 +766,9 @@ syncLimit=5
 # example sakes.
 # 数据目录(需要自己新建)
 # dataDir=/tmp/zookeeper
-dataDir=/opt/zookeeper/data
-# 日志目录(需要自己新建)
-dataLogDir=/var/log/zookeeper
+dataDir=/opt/data/zookeeper
+# 事务日志目录默认将事务日志文件和快照日志文件都存储在dataDir对应的目录下
+# dataLogDir=/opt/data/zookeeper
 # the port at which the clients will connect
 # 对外服务端口
 clientPort=2181
@@ -802,33 +797,49 @@ clientPort=2181
 
 
 
+配置日志目录
+
+`sudo vim /opt/apps/zookeeper/conf/logback.xml `
+
+```xml
+<property name="zookeeper.log.dir" value="/var/log/zookeeper" />
+```
+
+`sudo vim /opt/apps/zookeeper/bin/zkEnv.sh`
+
+```sh
+if [ "x${ZOO_LOG_DIR}" = "x" ]
+then
+    ZOO_LOG_DIR="$ZOOKEEPER_PREFIX/logs"
+fi
+# 新增
+ZOO_LOG_DIR="/var/log/zookeeper"
+```
+
+
+
 ### 创建文件夹&添加用户
 
 ```sh
-sudo mkdir /opt/zookeeper/data
-sudo mkdir /var/log/zookeeper
+$ sudo mkdir /opt/data/zookeeper
+$ sudo mkdir /var/log/zookeeper
 
-sudo groupadd -r appgroup
-sudo useradd -r -g appgroup -s /bin/bash mysql
+$ sudo groupadd -r apps
+$ sudo useradd -r -g apps -s /bin/false zookeeper
 sudo passwd zookeeper
-chown -R zookeeper:appgroup /opt/zookeeper
-chown -R zookeeper:appgroup /var/log/zookeeper
+$ sudo chown -R zookeeper:apps /opt/apps/zookeeper
+$ sudo chown -R zookeeper:apps /opt/data/zookeeper
+$ sudo chown -R zookeeper:apps /var/log/zookeeper
 ```
 
 
 
 ### 启动
 
-执行/opt/zookeeper/zookeeper/bin/zkServer.sh
-
-```shell
-Usage: zkServer.sh [--config <conf-dir>] {start|start-foreground|stop|version|restart|status|print-cmd}
-```
-
 ```shell
 # 启动
-su zookeeper
-zookeeper@server-1:/opt/zookeeper/zookeeper/bin$ ./zkServer.sh start
+# Usage: zkServer.sh [--config <conf-dir>] {start|start-foreground|stop|version|restart|status|print-cmd}
+sudo -u zookeeper /opt/apps/zookeeper/bin/zkServer.sh start
 ZooKeeper JMX enabled by default
 Using config: /opt/zookeeper/zookeeper/bin/../conf/zoo.cfg
 Starting zookeeper ... STARTED 
@@ -837,7 +848,16 @@ zookeeper@server-1:/opt/zookeeper/zookeeper/bin$ jps -l
 733 sun.tools.jps.Jps
 685 org.apache.zookeeper.server.quorum.QuorumPeerMain
 # 如果jps -l没有看到zookeeper则查看logs目录下输出的日志
+cat /var/log/zookeeper/zookeeper-zookeeper-server-server01.out
 ```
+
+
+
+### 服务管理
+
+编写[脚本](../files/scripts/server/zookeeper.server)文件放在 base_dir 目录下 `/opt/apps/zookeeper/zookeeper.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
 
 
 
@@ -849,38 +869,36 @@ zookeeper@server-1:/opt/zookeeper/zookeeper/bin$ jps -l
 
 ip地址如下
 
-server-1:192.168.31.158
+server-1:192.168.31.101
 
-server-2:192.168.31.6
+server-2:192.168.31.102
 
-server-3:192.168.31.166
+server-3:192.168.31.103
 
 ### 配置
 
 在zookeeper的data目录下新建myid文件内容分别为0,1,2。这个文件就是记录每个服务器的ID
 
-/opt/zookeeper/zookeeper/conf/zoo.cfg比单机的配置多如下内容
+zoo.cfg比单机的配置多如下内容
 
 ```properties
 # server.服务器ID=服务器IP地址:服务器之间通信端口:服务器之间投票选举端口
-server.0=192.168.31.158:2888:3888
-server.1=192.168.31.6:2888:3888
-server.2=192.168.31.166:2888:3888
+server.0=192.168.31.101:2888:3888
+server.1=192.168.31.102:2888:3888
+server.2=192.168.31.103:2888:3888
 ```
 
 ### 启动
 
-/opt/zookeeper/zookeeper/bin/zkServer.sh start
-
 分别启动每个zookeeper，启动后查询一下运行状态
 
 ```shell
-zookeeper@server-1:~$ /opt/latest/zookeeper/bin/zkServer.sh start
+zookeeper@server-1:~$ sudo -u zookeeper /opt/apps/zookeeper/bin/zkServer.sh start
 ZooKeeper JMX enabled by default
 Using config: /opt/latest/zookeeper/bin/../conf/zoo.cfg
 Starting zookeeper ... STARTED
 
-zookeeper@server-1:~$ /opt/latest/zookeeper/bin/zkServer.sh status
+zookeeper@server-1:~$ sudo -u zookeeper /opt/apps/zookeeper/bin/zkServer.sh status
 ZooKeeper JMX enabled by default
 Using config: /opt/latest/zookeeper/bin/../conf/zoo.cfg
 Client port found: 2181. Client address: localhost.
@@ -888,12 +906,12 @@ Mode: leader
 ```
 
 ```shell
-zookeeper@server-2:~$ /opt/latest/zookeeper/bin/zkServer.sh start
+zookeeper@server-2:~$ sudo -u zookeeper /opt/apps/zookeeper/bin/zkServer.sh start
 ZooKeeper JMX enabled by default
 Using config: /opt/latest/zookeeper/bin/../conf/zoo.cfg
 Starting zookeeper ... STARTED
 
-zookeeper@server-2:~$ /opt/latest/zookeeper/bin/zkServer.sh status
+zookeeper@server-2:~$ sudo -u zookeeper /opt/apps/zookeeper/bin/zkServer.sh status
 ZooKeeper JMX enabled by default
 Using config: /opt/latest/zookeeper/bin/../conf/zoo.cfg
 Client port found: 2181. Client address: localhost.
@@ -901,12 +919,12 @@ Mode: follower
 ```
 
 ```shell
-zookeeper@server-3:~$ /opt/latest/zookeeper/bin/zkServer.sh start
+zookeeper@server-3:~$ sudo -u zookeeper /opt/apps/zookeeper/bin/zkServer.sh start
 ZooKeeper JMX enabled by default
 Using config: /opt/latest/zookeeper/bin/../conf/zoo.cfg
 Starting zookeeper ... STARTED
 
-zookeeper@server-3:~$ /opt/latest/zookeeper/bin/zkServer.sh status
+zookeeper@server-3:~$ sudo -u zookeeper /opt/apps/zookeeper/bin/zkServer.sh status
 ZooKeeper JMX enabled by default
 Using config: /opt/latest/zookeeper/bin/../conf/zoo.cfg
 Client port found: 2181. Client address: localhost.
@@ -2045,36 +2063,26 @@ public class RabbitConfig {
 
 打开[kafka下载页面](http://kafka.apache.org/downloads)选择一个版本进行下载
 
-将下载好的文件解压到/opt/kafka目录下
-
-创建软连接
-
 ```shell
-ln -s /opt/kafka/kafka_2.13-2.6.0 /opt/kafka/kafka
-```
+$ sudo tar -zxvf kafka_2.13-3.8.0.tgz
+$ sudo mv kafka_2.13-3.8.0 /opt/apps/kafka
+$ sudo mkdir /opt/data/kafka
 
-
-
-#### 创建文件夹&添加用户
-
-```sh
-sudo mkdir /opt/kafka/data
-
-sudo groupadd -r appgroup
-sudo useradd -r -g appgroup -s /bin/bash kafka
-sudo passwd kafka
-chown -R kafka:appgroup /opt/kafka
+$ sudo groupadd -r apps
+$ sudo useradd -r -g apps -s /bin/false kafka
+$ sudo chown -R kafka:apps /opt/apps/kafka
+$ sudo chown -R kafka:apps /opt/data/kafka
 ```
 
 
 
 #### 配置
 
-/opt/kafka/kafka/config/server.properties
+/opt/apps/kafka/config/server.properties
 
 broker.id
 
-listeners
+listeners:wq
 
 log.dirs
 
@@ -2123,7 +2131,7 @@ socket.request.max.bytes=104857600
 
 # A comma separated list of directories under which to store log files
 # 存放消息日志文件目录
-log.dirs=/opt/kafka/data
+log.dirs=/opt/data/kafka
 
 # The default number of log partitions per topic. More partitions allow greater
 # parallelism for consumption, but this will also result in more files across
@@ -2214,16 +2222,12 @@ group.initial.rebalance.delay.ms=0
 
 
 
-
-
-
-
 #### 启动
 
 ```shell
-/opt/kafka/kafka/bin/kafka-server-start.sh /opt/kafka/kafka/config/server.properties
+sudo -u kafka /opt/apps/kafka/bin/kafka-server-start.sh /opt/apps/kafka/config/server.properties
 # 后台启动
-#/opt/kafka/kafka/bin/kafka-server-start.sh -daemon /opt/kafka/kafka/config/server.properties
+# sudo -u kafka /opt/apps/kafka/bin/kafka-server-start.sh -daemon /opt/apps/kafka/config/server.properties
 # 启动成功
 [2020-08-29 16:03:13,113] INFO [KafkaServer id=0] started (kafka.server.KafkaServer)
 # 查看启动情况
@@ -2235,6 +2239,12 @@ young@server-1:~$ jps -l
 
 
 
+#### 服务管理
+
+编写[脚本](../files/scripts/server/kafka.server)文件放在 base_dir 目录下 `/opt/apps/kafka/kafka.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+
 
 
 ### 集群
@@ -2245,11 +2255,11 @@ young@server-1:~$ jps -l
 
 ip地址如下
 
-server-1:192.168.31.158
+server-1:192.168.31.101
 
-server-2:192.168.31.6
+server-2:192.168.31.102
 
-server-3:192.168.31.166
+server-3:192.168.31.103
 
 #### 配置
 
@@ -2259,13 +2269,13 @@ server-3:192.168.31.166
 # 集群内必须唯一,为集群内的kafka分配唯一id
 borker.id=0
 # 配置为zookeeper集群，每个配置用逗号,隔开
-zookeeper.connect=192.168.31.158:2181,192.168.31.6:2181,192.168.31.166:2181
+zookeeper.connect=192.168.31.101:2181,192.168.31.102:2181,192.168.31.103:2181
 # 主机ip地址
-host.name=192.168.31.158
+host.name=192.168.31.101
 # 为新建Topic的默认Partition数量，partition数量提升，一定程度上可以提升并发性，数值应该小于等于broker的数量
 num.partitions=3
-listeners=PLAINTEXT://192.168.31.158:9092
-advertised.listeners=PLAINTEXT://192.168.31.158:9092
+listeners=PLAINTEXT://192.168.31.101:9092
+advertised.listeners=PLAINTEXT://192.168.31.101:9092
 # listeners就是主要用来定义Kafka Broker的Listener的配置项，用于本机监听。
 # advertised.listeners参数的作用就是将Broker的Listener信息发布到Zookeeper供客户端使用监听，是真正的对外代理地址。如果没有设置，会用listeners。
 # 外部连接访问这个，需要设置这个值，
@@ -2306,19 +2316,18 @@ young@server-3:~$ jps -l
 
 #### 命令行
 
-创建topic
+```shell
+# 展示所有topic
+kafka-topics.sh --list --bootstrap-server localhost:9092
 
-bin/kafka-topics.sh --zookeeper localhost:2181 --create --topic testtopic --partitions 2 --replication-factor 1
+# 创建topic
+kafka-topics.sh --bootstrap-server localhost:9092 --create --topic testtopic --partitions 2 --replication-factor 1
+# --topic ：指定所要创建topic的名称
+# --partitions ：指定了分区个数，每个线程处理一个分区
+# --replication-factor：指定副本因子，副本数，每个副本分布在不同节点，不能超过总结点数。如只有一个节点。创建时指定副本数为2，就会报错。
+```
 
---zookeeper ：指定kafka所连接的zookeeper服务地址，多个zookeeper使用逗号,分隔
 
---create ：创建topic的命令
-
---topic ：指定所要创建topic的名称
-
- --partitions ：指定了分区个数，每个线程处理一个分区
-
---replication-factor：指定副本因子，副本数，每个副本分布在不同节点，不能超过总结点数。如只有一个节点。创建时指定副本数为2，就会报错。
 
 删除topic
 
@@ -2328,11 +2337,7 @@ Topic testtopic is marked for deletion.
 Note: This will have no impact if delete.topic.enable is not set to true.
 ```
 
-
-
-展示所有topic
-
-bin/kafka-topics.sh --zookeeper localhost:2181 --list
+<p></p>
 
 
 
@@ -2582,7 +2587,7 @@ spring.kafka.bootstrapServers=192.168.31.158:9092
 # spring.kafka.producer.transaction-id-prefix=kafka_tx.
 
 # kafka consumer
-# spring.kafka.consumer.bootstrapServers=192.168.31.158:2181,192.168.31.6:2181,192.168.31.166:2181
+# spring.kafka.consumer.bootstrapServers=192.168.31.158:9092,192.168.31.6:9092,192.168.31.166:9092
 spring.kafka.consumer.bootstrapServers=192.168.31.158:9092
 
 ```
