--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -666,6 +666,8 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | RabbitMQ      | 3.12.6  | 15672[management], 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS] | 10575, 10574, 10563,                     | 11575, 11574, 11563 |                |
 | Zipkin        | 2.24.3  | 9411[dashboard]                                              | 10527                                    | 11527               |                |
 | Nginx         | 1.24.0  | 80                                                           |                                          |                     |                |
+| Zookeeper     | 3.8.4   | 2181                                                         | -                                        | 11308               |                |
+| Kafka         | 3.8.0   | 9092                                                         | -                                        | 11598               |                |
 
 
 
@@ -682,6 +684,8 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 12494, 12535        |
 | RabbitMQ      | 3.12.6  | 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS],15672[management] | 12574, 12563, 12575 |
 | Zipkin        | 2.24.3  | 9411[dashboard]                                              | 12527               |
+| Zookeeper     | 3.8.4   | 2181                                                         | 12308               |
+| Kafka         | 3.8.0   | 9092                                                         | 12598               |
 
 
 
@@ -698,6 +702,8 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 13494, 13535        |
 | RabbitMQ      | 3.12.6  | 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS],15672[management] | 13574, 13563, 13575 |
 | Zipkin        | 2.24.3  | 9411[dashboard]                                              | 13527               |
+| Zookeeper     | 3.8.4   | 2181                                                         | 13308               |
+| Kafka         | 3.8.0   | 9092                                                         | 13598               |
 
 
 
