--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -2274,8 +2274,8 @@ zookeeper.connect=192.168.31.101:2181,192.168.31.102:2181,192.168.31.103:2181
 host.name=192.168.31.101
 # 为新建Topic的默认Partition数量，partition数量提升，一定程度上可以提升并发性，数值应该小于等于broker的数量
 num.partitions=3
-listeners=PLAINTEXT://192.168.31.101:9092
-advertised.listeners=PLAINTEXT://192.168.31.101:9092
+#listeners=PLAINTEXT://192.168.31.101:9092
+#advertised.listeners=PLAINTEXT://192.168.31.101:9092
 # listeners就是主要用来定义Kafka Broker的Listener的配置项，用于本机监听。
 # advertised.listeners参数的作用就是将Broker的Listener信息发布到Zookeeper供客户端使用监听，是真正的对外代理地址。如果没有设置，会用listeners。
 # 外部连接访问这个，需要设置这个值，
