--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -313,3 +313,16 @@ https://sonyalpha.blog/
 4. 饱和度:降低
 5. 清晰度增加
 
+
+
+
+
+ACR
+
+高光：局部调整工具，影响画面中最亮的一部分
+
+白色：全局调整工具
+
+阴影：局部调整工具，整体的变化较小
+
+黑色：全局调整工具，变化程度与范围都则明显更大
