--- a/solid/前端.MD
+++ b/solid/前端.MD
@@ -3879,15 +3879,65 @@ x方向溢出使文本换行:word-break:break-all;
 	body {
    	 	margin: 0;
 	}
-6.元素绝对定位水平、垂直居中
-	.element {
-  	  width: 600px; height: 400px;
-  	  position: absolute; left: 0; top: 0; right: 0; bottom: 0;
-  	  margin: auto;    /* 有了这个就自动居中了 */
-	}
 	
 7.div内的元素float之后不能撑开父元素
 	在父元素添加overflow:hidden;
+
+
+
+### 居中
+
+```css
+/* 水平居中 */
+.level_center{
+    width: 100px; /* 需要为定值 */
+    height: 100px;
+    display: block;
+    margin: 0 auto;
+}
+
+/* 使用定位和负边距居中 */
+.level_center{
+    width: 98%;
+    height: 100%;
+    /* 水平居中 */
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    /* 水平和垂直居中 */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* 水平垂直居中 */
+.level_center {
+    width: 600px; height: 400px;
+	/* 需要父元素设置 position: absolute; */
+    position: absolute; 
+    left: 0; top: 0; right: 0; bottom: 0;
+    margin: auto;
+}
+
+/* 子元素水平垂直居中 */
+.showImagePanel{
+    width: 100px;
+    height: 100px;
+    /* 使子元素垂直/水平居中 */
+    /* 主轴的方向 */
+    flex-direction: column;
+    display:flex;
+    /* 子元素相对父元素垂直（交叉轴）居中 */
+    align-items:center;
+    /* 子元素相对父元素水平（主轴）居中 */
+    justify-content:center;
+}
+```
+
+
+
+
 
 
 
