--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -326,3 +326,19 @@ ACR
 阴影：局部调整工具，整体的变化较小
 
 黑色：全局调整工具，变化程度与范围都则明显更大
+
+
+
+### 流星叠加
+
+文件 > 脚本 > 文件载入堆栈
+
+Ctrl + T 调整图像对齐（编辑 > 首选项 >工具 勾选 在使用变换时显示参考点）
+
+点击图层蒙版（右下角）
+
+选择画笔工具 前景色设置为黑色
+
+将流星区域涂黑（先点击流星头部，后按 Shift 并点击尾部）
+
+Ctrl+I 蒙版反向显示流星
